[gd_scene load_steps=8 format=3 uid="uid://crvxg1hqoal3g"]

[ext_resource type="Script" uid="uid://1m41t58aqnma" path="res://scripts/minigamesScripts/CookingGame/MiniGame.gd" id="1_7tmmp"]
[ext_resource type="PackedScene" uid="uid://cr1pl18sqrch1" path="res://scenes/minigamesScenes/CookingGame/Fruit.tscn" id="2_2248b"]
[ext_resource type="PackedScene" uid="uid://cahcy4dwkj61u" path="res://scenes/minigamesScenes/CookingGame/Knife.tscn" id="2_llhu8"]
[ext_resource type="Texture2D" uid="uid://dmt1s7fkt80g" path="res://assets/atlas/bg.png" id="3_06rti"]
[ext_resource type="AudioStream" uid="uid://bbedontbys4ui" path="res://assets/sounds/taking-out-knife-217793.mp3" id="4_2248b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_llhu8"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Curve" id="Curve_lnmxm"]
_limits = [0.0, 1.0, 0.0, 0.010869563]
_data = [Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(0.004666823, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="MiniGame" type="Node2D"]
script = ExtResource("1_7tmmp")
fruit_scene = ExtResource("2_2248b")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.58431375)
offset_left = 1.000001
offset_top = 1.0000019
offset_right = 11500.999
offset_bottom = 6430.9995
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_06rti")

[node name="CutSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2248b")

[node name="Knife" parent="." instance=ExtResource("2_llhu8")]

[node name="FruitSpawner" type="Node2D" parent="."]

[node name="FruitContainer" type="Node2D" parent="."]

[node name="MessageLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 43.0
theme_override_styles/normal = SubResource("StyleBoxFlat_llhu8")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Line2D" type="Line2D" parent="."]
width = 4.0
width_curve = SubResource("Curve_lnmxm")
default_color = Color(0.8226736, 0.23912948, 0.25449383, 1)
begin_cap_mode = 2
end_cap_mode = 2
